# swagger_server/controllers/default_controller.py
@@ -53,3 +53,20 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
     if res:
         return res
     return 'Not Found', 404
+
+def get_student_by_last_name(student_last_name):  # noqa: E501
+    """Find student by last name
+
+    Returns a single student # noqa: E501
+
+    :param student_last_name: last name of student to return
+    :type student_last_name: string
+    :param subject: The subject name
+    :type subject: str
+
+    :rtype: Student
+    """
+    res = student_service.get_student_by_last_name(student_last_name)
+    if res:
+        return res
+    return 'Not Found', 404
